--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "postgres-export",
+  "name": "postgres-json-export",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
